--- a/k8s/base/resources/srv.yaml
+++ b/k8s/base/resources/srv.yaml
@@ -10,7 +10,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-srv
-  namespace: 4sh-formation-@ME
   labels:
     app: app-srv
     kind: app
@@ -26,7 +25,7 @@ spec:
     spec:
       containers:
         - name: app-srv
-          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME:1.0.1
+          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-me
           envFrom:
             - configMapRef:
                 name: app-config
@@ -56,7 +55,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-srv
-  namespace: 4sh-formation-@ME
 spec:
   selector:
     app: app-srv
