--- a/k8s/environments/tpl/kustomization.yaml
+++ b/k8s/environments/tpl/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: 4sh-formation-xhn
+namespace: 4sh-formation-@ME
 resources:
   - ../../base
 patches:
@@ -10,6 +10,6 @@ patches:
       name: ingress
 images:
   - name: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-me
-    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-xhn
+    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-@ME
   - name: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-me
-    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-xhn
+    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME
