use configmap to configure server

--- a/k8s/environments/tpl/kustomization.yaml
+++ b/k8s/environments/tpl/kustomization.yaml
@@ -3,6 +3,10 @@ kind: Kustomization
 namespace: 4sh-formation-@ME
 resources:
   - ../../base
+configMapGenerator:
+  - name: app-config
+    envs:
+      - application.conf
 patches:
   - path: patches/ingress.patch.json
     target:
