--- a/k8s/environments/tpl/kustomization.yaml
+++ b/k8s/environments/tpl/kustomization.yaml
@@ -4,22 +4,9 @@ namespace: 4sh-formation-@ME
 resources:
   - ../../base
 configMapGenerator:
-  - name: app-config
+  - name: env-config
     envs:
-      - application.conf
-patches:
-  - path: patches/ingress.patch.json
-    target:
-      kind: Ingress
-      name: ingress
-  - path: patches/srv.patch.yaml
-    target:
-      group: apps
-      version: v1
-      kind: Deployment
-      labelSelector: app=app-srv
-images:
-  - name: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-me
-    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-@ME
-  - name: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-me
-    newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME
+      - env.conf
+  - name: app-config
+    files:
+      - app.conf
