--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
@@ -18,11 +18,17 @@ spec:
       http:
         paths:
           - path: /api/
+            pathType: Prefix
             backend:
-              serviceName: app-srv
-              servicePort: 80
+              service:
+                name: app-srv
+                port:
+                  number: 80
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: app-ui
-              servicePort: 80
+              service:
+                name: app-ui
+                port:
+                  number: 80
 ---
