--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -28,7 +28,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: app-ui
+                name: kube-test-container
                 port:
                   number: 80
 ---
