Revert "add kube-test-container"
This reverts commit f05e16f8566ed80bd15286c0ee02a8c5a75fd413.

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -28,7 +28,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: kube-test-container
+                name: app-ui
                 port:
                   number: 80
 ---
