--- a/k8s/srv.yaml
+++ b/k8s/srv.yaml
@@ -31,8 +31,7 @@ spec:
             name: app-config
       containers:
         - name: app-srv
-          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME
-          imagePullPolicy: Always
+          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME:1.0.0
           resources:
             requests:
               cpu: "100m"
