--- a/k8s/srv.yaml
+++ b/k8s/srv.yaml
@@ -31,7 +31,7 @@ spec:
             name: app-config
       containers:
         - name: app-srv
-          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME:1.0.0
+          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME:1.0.1
           resources:
             requests:
               cpu: "100m"
@@ -40,6 +40,12 @@ spec:
               cpu: "500m"
               memory: "1000Mi"
           livenessProbe:
+            httpGet:
+              path: /healthcheck
+              port: 9000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
             httpGet:
               path: /healthcheck
               port: 9000
