--- a/k8s/srv.yaml
+++ b/k8s/srv.yaml
@@ -4,8 +4,7 @@ metadata:
   name: app-config
   namespace: 4sh-formation-@ME
 data:
-  app.conf: |
-    env=@ME
+  env: @ME
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -25,13 +24,12 @@ spec:
       labels:
         app: app-srv
     spec:
-      volumes:
-        - name: config-volume
-          configMap:
-            name: app-config
       containers:
         - name: app-srv
           image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ME:1.0.1
+          envFrom:
+            - configMapRef:
+                name: app-config
           resources:
             requests:
               cpu: "100m"
@@ -51,9 +49,6 @@ spec:
               port: 9000
             initialDelaySeconds: 10
             periodSeconds: 10
-          volumeMounts:
-            - name: config-volume
-              mountPath: /etc/conduit
           ports:
             - containerPort: 9000
 ---
