--- a/k8s/environments/tpl/kustomization.yaml
+++ b/k8s/environments/tpl/kustomization.yaml
@@ -12,6 +12,12 @@ patches:
     target:
       kind: Ingress
       name: ingress
+  - path: patches/srv.patch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      labelSelector: app=app-srv
 images:
   - name: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-me
     newName: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-@ME
