--- a/k8s/base/resources/srv.yaml
+++ b/k8s/base/resources/srv.yaml
@@ -21,7 +21,7 @@ spec:
             name: app-config
       containers:
         - name: app-srv
-          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-@ENV
+          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-srv-me
           envFrom:
             - configMapRef:
                 name: env-config
