--- a/k8s/base/resources/ui.yaml
+++ b/k8s/base/resources/ui.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: app-ui
-          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-@ENV
+          image: europe-docker.pkg.dev/quatreapp/k8straining/myapp-ui-me
           resources:
             requests:
               cpu: "100m"
